--- a/views/index.jade
+++ b/views/index.jade
@@ -1,8 +1,8 @@
 html
     head
       title Devnology - Community Driven Development
-      block scripts
-        scripts(src='/jquery.js;)
+        include htmlheader
+        block scripts
     body
       include contentheader
       block content
