--- a/controllers/event/views/event_template.jade
+++ b/controllers/event/views/event_template.jade
@@ -1,9 +1,8 @@
 html
     head
       title Devnology - events
-      block scripts
-        scripts(src='/lib/jquery/js/jquery-1.8.3.js')
-        scripts(src='/lib/bootstrap/js/bootstrap.js')    
+      include ../../../views/htmlheader
+
     body
       include ../../../views/contentheader
     
