--- a/views/template.jade
+++ b/views/template.jade
@@ -1,8 +1,7 @@
 html
     head
+        include htmlheader
       block scripts
-        scripts(src='/lib/jquery/js/jquery-1.8.3.js')
-        scripts(src='/lib/bootstrap/js/bootstrap.js')
     body
       include contentheader
       block content
